...
import { PrivacyPolicyFC } from './types'

const PrivacyPolicy: PrivacyPolicyFC = ({ onPress, shouldAgree }) => {
  const { t } = useTranslation()

  return (
    <View style={styles.container} testID="TermsAndConditions">
      <BaseText style={styles.title}>{t('drawer.termsAndConditions')}</BaseText>
      <ScrollView style={{ marginVertical: 32 }}>
        <TouchableOpacity>
          <HTML html={t('privacyPolicy')} />
        </TouchableOpacity>
      </ScrollView>
...
          shouldAgree
            ? (<PrivacyAndPolicyButton onPress={onPress} />)
            : (
              <TouchableOpacity
                style={styles.closeButtonTouchable}
                onPress={onPress}
                testID="closeTermsAndConditionsModalButton"
              >
                <Image source={images.close} style={styles.closeButtonImage} />
              </TouchableOpacity>
            )
        }
      </View>
...
