...
          keyboardType="phone-pad"
          onChangeText={phoneTextHandler}
          onSubmitEditing={onSubmit}
          onFocus={(): void => onChange()}
          onBlur={(): void => onChange(false)}
          ref={ref}
          testID="PhoneInput"
          title="authentication.number"
          returnKeyType="send"
          placeholder={inputPlaceholder}
          placeholderTextColor={Colors.primaryGray}
        />
        <Animated.View style={[styles.modalSelectorContainer, { opacity: animation }]}>
...
