...
      <View style={styles.receiveCodeBtnContainer}>
        <TouchableOpacity
          activeOpacity={1}
          onPress={receiveCode}
          disabled={disabled}
          style={styles.receiveCodeBtnTouchable}
          testID="SendOTP"
        >
          <Animated.View style={[styles.codeReceive, { width: animation }]} />
          <MaskedView
            style={styles.maskedView}
            maskElement={(
              <View style={styles.receiveCodeInnerView}>
...
          onSubmitEditing={receiveCode}
          placeholderTextColor={Colors.primaryWhite}
          allowFontScaling={false}
          ref={inputRef}
          pointerEvents={disabledInput ? 'none' : 'auto'}
          keyboardType="number-pad"
          testID="OneTimePasswordInput"
          {...props}
        />
      </View>
      <Animated.Text style={styles.codeValidityText}>
        {showText && t('authentication.forgotPasswordPage.codeValidity')}
      </Animated.Text>
...
