...
        <BaseButton
          onPress={handleSubmit(onButtonClick)}
          text="enter"
          image={images.arrowRight}
          style={styles.baseButton}
          imageStyle={styles.baseButtonImageStyle}
          testID="ForgotPasswordNextButton"
        />
      </KeyboardAvoidingView>
    </View>
  )
}

...
