...
          image={images.chargeWithCode}
          imageStyle={styles.inputImage}
          keyboardType="number-pad"
          onChangeText={setChargerWithCode}
          onSubmit={findCharger}
          title="charger.enterCode"
          testID="ChargeWithCodeInput"
        />
        <BaseButton
          onPress={findCharger}
          text="next"
          style={styles.baseButton}
          imageStyle={styles.baseButtonImageStyle}
          image={images.arrowRight}
          testID="next"
        />

...
