...
            : navigation.navigate('HomeTabNavigation', {
              screen: 'NotAuthorized',
            })
        }}
        image={images.chargeWithCodeTab}
        imageStyle={styles.chargeWithCode}
        testID="ChargeWithCode"
      />
      {chargingState.length > 0 && isAuthenticated() && (
        <Animatable.View
          animation={zoomOut}
          iterationCount="infinite"
          duration={1500}
...
      )}
      {isAuthenticated() && (
        <TabNavigationButtons
          navigate={() => navigation.navigate('HomeTabNavigation', { screen: 'Favorites' })}
          image={images.favorite}
          active={inArray(favoritesScreens, currentRouteName)}
          testID="FavoriteChargers"
        />
      )}
      <TabNavigationButtons
        navigate={() => navigate('drawer')}
        image={images.menu}
        active={false}
...
